fix(progress-flow): prevent `z-index` overlapping problems by isolating the component
The progress-flow component will now have its own stacking content.
So if other elements in the DOM are absolutely positioned, they will
not be covered by elements of the progress-flow component which have
a z-index.

--- a/src/components/progress-flow/progress-flow.scss
+++ b/src/components/progress-flow/progress-flow.scss
@@ -17,6 +17,7 @@
     --selected-indicator-right: -0.5rem;
     --max-text-width: 10rem;
 
+    isolation: isolate;
     box-sizing: border-box;
     width: 100%;
     display: flex;
